@@ -2490,6 +2490,8 @@ version 11.19.1 (2024-09-05)
 version 11.20 (2024-09-29)
     * Adds DeviceSecretToken class to represent DeviceSecret instances as a
       Token.
+    * Adds JSONObjectUtils.getNonBlankString method.
     * Certain parse methods must prevent unchecked IllegalArgumentExceptions
       due to empty or blank String (iss #479).
-    * Adds JSONObjectUtils.getNonBlankString method.
+    * RefreshToken.parse(JSONObject) must not throw unchecked exception on
+      empty or blank String (iss #480).
